--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ascii-table": "^0.0.9",
+    "chalk": "^4.1.2",
     "discord.js": "^14.8.0",
     "dotenv": "^16.0.3",
     "glob": "^9.3.2",
     "mongoose": "^7.0.3",
+    "ms": "^2.1.3",
     "nodemon": "^2.0.22"
   }
 }
